# sero

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  library.json  protocol-definition.md
.github/workflows/: ci.yml  coverage.yml  release.yml  static-analysis.yml
_codeql_build_dir/: CTestTestfile.cmake  desktop_peer  diag_scanner  example_client  example_server  verify_build
_codeql_build_dir/test/: CTestTestfile.cmake  sero_tests  sero_tests[1]_include.cmake  sero_tests[1]_tests.cmake
examples/: client.cpp  demo_constants.hpp  desktop_peer.cpp  diag_scanner.cpp  esp32_event_handler.hpp  server.cpp  time_service.hpp  udp_transport.hpp
include/: sero.hpp
include/sero/: runtime.hpp
include/sero/core/: config.hpp  diagnostic_counters.hpp  dtc_store.hpp  log.hpp  message_header.hpp  transport.hpp  types.hpp
include/sero/security/: crc16.hpp  e2e_protection.hpp  hmac.hpp  message_authenticator.hpp  sha256.hpp
include/sero/service/: diagnostics_service.hpp  event_handler.hpp  event_manager.hpp  method_dispatcher.hpp  request_tracker.hpp  service.hpp  service_discovery.hpp
node-module/: .gitignore  README.md  binding.gyp  index.ts  package.json
node-module/src/: sero-node.cpp
src/: verify_build.cpp
test/: CMakeLists.txt  test_crc16.cpp  test_diagnostic_counters.cpp  test_diagnostics_service.cpp  test_dtc_store.cpp  test_e2e_protection.cpp  test_event_manager.cpp  test_helpers.hpp  test_hmac.cpp  test_logging.cpp  test_message_authenticator.cpp  test_message_header.cpp  test_method_dispatcher.cpp  test_request_tracker.cpp  test_runtime.cpp  test_sd_payloads.cpp  test_service_discovery.cpp  test_service_event_handler.cpp  test_sha256.cpp  test_types.cpp
